WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310834
[JSC][IPInt] Double alignIPInt to 512 in LLINT_TRACING builds to fix dispatch table alignment assertion
https://bugs.webkit.org/show_bug.cgi?id=310834
Summary
[JSC][IPInt] Double alignIPInt to 512 in LLINT_TRACING builds to fix dispatch...
Yijia Huang
Reported
2026-03-26 14:32:45 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-26 14:32:52 PDT
<
rdar://problem/173441688
>
Yijia Huang
Comment 2
2026-03-26 14:39:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61434
Fujii Hironori
Comment 3
2026-03-26 17:30:18 PDT
***
Bug 310768
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2026-03-26 20:06:18 PDT
Committed
310045@main
(f1d9b0a0855c): <
https://commits.webkit.org/310045@main
> Reviewed commits have been landed. Closing PR #61434 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug