[JSC][IPInt] Double alignIPInt to 512 in LLINT_TRACING builds to fix dispatch table alignment assertion https://bugs.webkit.org/show_bug.cgi?id=310834 rdar://173441688

Reviewed by Yusuke Suzuki.

When LLINT_TRACING is enabled, the ipintOp macro injects a trace prologue
(register moves + a C call to _ipint_extern_trace) into IPInt handlers.
This can push some handlers past the 256-byte slot boundary. When a handler
overflows its slot, the aligned directive skips to the next 256-byte boundary
past the overflow, shifting all subsequent handler addresses forward.
IPInt::initialize()'s RELEASE_ASSERT then fires because handler N is no longer
at exactly N * alignIPInt from the dispatch base.

Fix: include LLIntCommon.h to expose LLINT_TRACING, and set alignIPInt to 512
in tracing builds. Non-tracing handlers already fit within 256 bytes (proven
by the assertion passing in non-tracing builds), so doubling the slot size
accommodates the trace overhead. IPInt::initialize()'s validation at startup
confirms the table is correctly laid out. The dispatch shift amount is computed
via WTF::fastLog2(alignIPInt) and updates automatically. Non-tracing builds
(LLINT_TRACING 0, the default) are unaffected.

Canonical link: https://commits.webkit.org/310045@main